Update pip-tools to 6.5.0 and remove pip restriction
pip-tools 6.5.0 fixes the issue it had with pip 22. This removes the
restriction we put in place.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,10 +14,7 @@ RUN apt-get update && \
 
 COPY --chown=app:app requirements.txt /app/
 
-# Install Socorro Python requirements using pip < 22 because pip 22
-# doesn't work with pip-tools. (2022-02-01)
-# https://github.com/jazzband/pip-tools/issues/1558
-RUN pip install -U 'pip<22' && \
+RUN pip install -U 'pip>=20' && \
     pip install --no-cache-dir -r requirements.txt && \
     pip check --disable-pip-version-check
 
