--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ version: 2.1
 jobs:
   build_test_push:
     docker:
-      - image: mozilla/cidockerbases:docker-latest
+      - image: cimg/base:2022.02
         auth:
           username: $DOCKER_USER
           password: $DOCKER_PASS
@@ -17,12 +17,9 @@ jobs:
       APP_NAME: "socorro_collector"
     steps:
       - run:
-          name: Host info
-          command: uname -v
-
-      - run:
           name: Install essential packages
-          command: apt-get install make
+          command: |
+            sudo apt-get install make
 
       - checkout:
           path: /antenna
@@ -57,6 +54,7 @@ jobs:
       - run:
           name: Get info
           command: |
+            uname -v
             docker info
             which docker-compose
             docker-compose --version
