--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
 
       - setup_remote_docker:
           version: 19.03.13
+          docker_layer_caching: true
 
       - run:
           name: Login to Dockerhub
