--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,6 +83,7 @@ jobs:
       - run:
           name: Lint
           command: |
+            touch .docker-build
             docker run local/antenna_deploy_base shell ./bin/run_lint.sh
 
   test:
@@ -101,6 +102,7 @@ jobs:
       - run:
           name: Run tests
           command: |
+            touch .docker-build
             make test-ci
 
   push:
