--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@
 version: 2.1
 jobs:
   build:
-    docker:
+    docker: &docker
       - image: cimg/base:2022.02
         auth:
           username: $DOCKER_USER
@@ -64,15 +64,13 @@ jobs:
 
       - run:
           name: Verify requirements.txt file
+          # yamllint disable rule:line-length
           command: |
-            docker run local/antenna_deploy_base shell ./bin/run_verify_reqs.sh
+            docker-compose run --no-deps deploy-base shell ./bin/run_verify_reqs.sh
+          # yamllint enable rule:line-length
 
   lint:
-    docker:
-      - image: cimg/base:2022.02
-        auth:
-          username: $DOCKER_USER
-          password: $DOCKER_PASS
+    docker: *docker
     environment:
       APP_NAME: "socorro_collector"
     steps:
@@ -83,15 +81,11 @@ jobs:
       - run:
           name: Lint
           command: |
-            touch .docker-build
-            docker run local/antenna_deploy_base shell ./bin/run_lint.sh
+            make my.env
+            docker-compose run --no-deps deploy-base shell ./bin/run_lint.sh
 
   test:
-    docker:
-      - image: cimg/base:2022.02
-        auth:
-          username: $DOCKER_USER
-          password: $DOCKER_PASS
+    docker: *docker
     environment:
       APP_NAME: "socorro_collector"
     steps:
@@ -102,15 +96,10 @@ jobs:
       - run:
           name: Run tests
           command: |
-            touch .docker-build
             make test-ci
 
   push:
-    docker:
-      - image: cimg/base:2022.02
-        auth:
-          username: $DOCKER_USER
-          password: $DOCKER_PASS
+    docker: *docker
     environment:
       APP_NAME: "socorro_collector"
     steps:
