bug 1757039: update to localstack 0.14.0
Updating to localstack 0.14.0 lets us simplify our local dev environment
a little. We only have to run a single localstack service which handles
both SQS and S3.

While doing this, I fixed an issue with retrieving version.json in the
local dev environment and I updated the README.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,8 +123,7 @@ jobs:
           command: |
             make my.env
             docker-compose up --detach --no-color \
-                localstack-s3 \
-                localstack-sqs \
+                localstack \
                 statsd \
                 fakesentry
             docker-compose run --rm ci shell ./bin/run_tests.sh
