--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -1,4 +1,4 @@
-# prod-like Antenna environment with localstack-s3.
+# prod-like Antenna environment with localstack.
 #
 # See https://antenna.readthedocs.io/ for documentation.
 
@@ -17,14 +17,14 @@ CRASHMOVER_CRASHSTORAGE_CLASS=antenna.ext.s3.crashstorage.S3CrashStorage
 CRASHMOVER_CRASHPUBLISH_CLASS=antenna.ext.sqs.crashpublish.SQSCrashPublish
 
 # S3 settings
-CRASHMOVER_CRASHSTORAGE_ENDPOINT_URL=http://localstack-s3:4572
+CRASHMOVER_CRASHSTORAGE_ENDPOINT_URL=http://localstack:4566
 CRASHMOVER_CRASHSTORAGE_REGION=us-east-1
 CRASHMOVER_CRASHSTORAGE_ACCESS_KEY=foo
 CRASHMOVER_CRASHSTORAGE_SECRET_ACCESS_KEY=foo
 CRASHMOVER_CRASHSTORAGE_BUCKET_NAME=antennabucket
 
 # SQS settings
-CRASHMOVER_CRASHPUBLISH_ENDPOINT_URL=http://localstack-sqs:4576
+CRASHMOVER_CRASHPUBLISH_ENDPOINT_URL=http://localstack:4566
 CRASHMOVER_CRASHPUBLISH_REGION=us-east-1
 CRASHMOVER_CRASHPUBLISH_ACCESS_KEY=foo
 CRASHMOVER_CRASHPUBLISH_SECRET_ACCESS_KEY=foo
