bug 1762055: update kent to 0.4.1
This updates kent (fakesentry service) to 0.4.1 which fixes the problem
it has with Flask 2.1.0.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,6 +119,12 @@ jobs:
             docker load -i workspace/antenna-deploy-base.tar.gz
 
       - run:
+          name: Build Docker image
+          command: |
+            make build
+            docker-compose images
+
+      - run:
           name: Run tests
           command: |
             make my.env
