--- a/requirements.in
+++ b/requirements.in
@@ -5,6 +5,7 @@ datadog==0.44.0
 dockerflow==2022.7.0
 everett==3.0.0
 falcon==3.1.0
+fillmore==0.1.0
 gevent==21.12.0
 gunicorn==20.1.0
 isodate==0.6.1
@@ -12,7 +13,6 @@ markus==4.0.1
 sentry-sdk==1.7.2
 
 # Development requirements
-Sphinx==4.5.0
 bandit==1.7.4
 black==22.6.0
 click==8.1.3
@@ -21,8 +21,10 @@ flake8==4.0.1
 freezegun==1.2.1
 more-itertools==8.13.0
 pip-tools==6.8.0
-pytest-cov==3.0.0
 pytest==7.1.2
+pytest-cov==3.0.0
 requests==2.28.1
+Sphinx==4.5.0
 sphinx-rtd-theme==1.0.0
 urlwait==1.0
+werkzeug==2.1.2
