--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@
 # DOCKER_PASS
 version: 2.1
 jobs:
-  build:
-    docker: &docker
+  main:
+    docker:
       - image: cimg/base:2022.02
         auth:
           username: $DOCKER_USER
@@ -17,8 +17,7 @@ jobs:
     steps:
       - checkout
 
-      - &setup_remote_docker
-        setup_remote_docker:
+      - setup_remote_docker:
           version: 20.10.11
           docker_layer_caching: true
 
@@ -78,51 +77,11 @@ jobs:
           paths:
             - antenna-deploy-base.tar.gz
 
-  lint:
-    docker: *docker
-    environment:
-      APP_NAME: "socorro_collector"
-    steps:
-      - checkout
-
-      - *setup_remote_docker
-
-      - attach_workspace:
-          at: workspace
-
-      - run:
-          name: Load from workspace
-          command: |
-            docker load -i workspace/antenna-deploy-base.tar.gz
-
       - run:
           name: Lint
           command: |
             make my.env
             docker-compose run --rm --no-deps ci shell ./bin/run_lint.sh
-
-  test:
-    docker: *docker
-    environment:
-      APP_NAME: "socorro_collector"
-    steps:
-      - checkout
-
-      - *setup_remote_docker
-
-      - attach_workspace:
-          at: workspace
-
-      - run:
-          name: Load from workspace
-          command: |
-            docker load -i workspace/antenna-deploy-base.tar.gz
-
-      - run:
-          name: Build Docker image
-          command: |
-            make build
-            docker-compose images
 
       - run:
           name: Run tests
@@ -134,23 +93,6 @@ jobs:
                 fakesentry
             docker-compose run --rm ci shell ./bin/run_tests.sh
 
-  push:
-    docker: *docker
-    environment:
-      APP_NAME: "socorro_collector"
-    steps:
-      - checkout
-
-      - *setup_remote_docker
-
-      - attach_workspace:
-          at: workspace
-
-      - run:
-          name: Load from workspace
-          command: |
-            docker load -i workspace/antenna-deploy-base.tar.gz
-
       - run:
           name: Push to Dockerhub
           command: |
@@ -161,27 +103,7 @@ workflows:
 
   build_test_push:
     jobs:
-      - build:
-          filters:
-            tags:
-              only: /.*/
-      - lint:
-          requires:
-            - build
-          filters:
-            tags:
-              only: /.*/
-      - test:
-          requires:
-            - build
-          filters:
-            tags:
-              only: /.*/
-      - push:
-          requires:
-            - build
-            - lint
-            - test
+      - main:
           filters:
             tags:
               only: /.*/
