bug 1790618: remove unneeded deps and fix docs
This updates the Sphinx Makefile to what sphinx-build quickstart
generates now. It also removes graphviz from dependencies and Sphinx
conf.py file.

While doing that, I fixed some issues with the dev.rst docs.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,7 +10,7 @@ RUN groupadd --gid $groupid app && \
     chown app:app /app/
 
 RUN apt-get update && \
-    apt-get install -y gcc apt-transport-https build-essential graphviz
+    apt-get install -y gcc apt-transport-https build-essential
 
 COPY --chown=app:app requirements.txt /app/
 
