--- a/requirements.in
+++ b/requirements.in
@@ -27,3 +27,6 @@ Sphinx==4.5.0
 sphinx-rtd-theme==1.0.0
 urlwait==1.0
 werkzeug==2.2.2
+
+# NOTE(willkg): required until we update to python 3.11
+exceptiongroup==1.1.0
