--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,7 @@
 # Production requirements
 attrs==22.2.0
-boto3==1.26.41
-botocore==1.29.41
+boto3==1.26.61
+botocore==1.29.61
 datadog==0.44.0
 dockerflow==2022.8.0
 everett==3.1.0
@@ -11,22 +11,24 @@ gevent==22.10.2
 gunicorn==20.1.0
 isodate==0.6.1
 markus==4.1.0
-sentry-sdk==1.12.1
+sentry-sdk==1.14.0
 
 # Development requirements
 bandit==1.7.4
-black==22.12.0
+black==23.1.0
 click==8.1.3
-flake8==6.0.0
 freezegun==1.2.2
 more-itertools==9.0.0
 pip-tools==6.12.2
 pytest==7.2.1
 requests==2.28.2
-Sphinx==4.5.0
-sphinx-rtd-theme==1.0.0
 urlwait==1.0
 werkzeug==2.2.2
+
+# NOTE(willkg): wait to update these until we split flake8 out
+flake8==6.0.0
+Sphinx==4.5.0
+sphinx-rtd-theme==1.0.0
 
 # NOTE(willkg): required until we update to python 3.11
 exceptiongroup==1.1.0
