--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,6 +13,7 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         apt-transport-https \
         build-essential \
+        git \
         gcc \
         tini && \
     apt-get autoremove -y && \
