--- a/requirements.in
+++ b/requirements.in
@@ -22,13 +22,11 @@ more-itertools==9.0.0
 pip-tools==6.12.2
 pytest==7.2.1
 requests==2.28.2
-urlwait==1.0
-werkzeug==2.2.2
-
-# NOTE(willkg): wait to update these until we split flake8 out
-flake8==6.0.0
+ruff==0.0.257
 Sphinx==4.5.0
 sphinx-rtd-theme==1.0.0
+urlwait==1.0
+werkzeug==2.2.2
 
 # NOTE(willkg): required until we update to python 3.11
 exceptiongroup==1.1.0
