Update release script
This updates the release script which does a couple of things:

1. it supports ``tag_name_template`` in configuration which lets us
   specify the ``v%Y.%m.%d`` format we need for release tags
2. it supports ``pyproject.toml`` for configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,12 @@ docstring-quotes = "double"
 [tool.black]
 line-length = 88
 target-version = ["py37"]
+
+
+[tool.release]
+github_user = "mozilla-services"
+github_project = "antenna"
+bugzilla_product = "Socorro"
+bugzilla_component = "Infra"
+main_branch = "main"
+tag_name_template = "%Y.%m.%d"
